--- a/root/src/index.html
+++ b/root/src/index.html
@@ -2,10 +2,16 @@
 <html lang="en-US">
   <head>
     <%= t.include("partials/_head.html", grunt.data.json) %>
+    <% if (json.project.production && !json.project.embedded) { %>
+      <%= t.include("partials/_dataLayer.html") %>
+      <%= t.include("partials/_gtm.html") %>
+    <% } %>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
+    <% if (json.project.production && !json.project.embedded) { %>
+      <%= t.include("partials/_gtmNoScript.html") %>
+    <% } %>
     <responsive-child>
       <!-- content goes here -->
     </responsive-child>
